fixed docker file

--- a/src/main/docker/Dockerfile
+++ b/src/main/docker/Dockerfile
@@ -1,7 +1,7 @@
 FROM frolvlad/alpine-oraclejdk8:slim
 VOLUME /tmp
 WORKDIR /app
-ADD rollingstone-eommcerce-cqrs-todo-rest-api-template-1.jar app.jar
+ADD rollingstone-eommcerce-cqrs-todo-rest-api-template-1.0.jar app.jar
 ENV JAVA_OPTS=""
 EXPOSE 8082
 EXPOSE 9082
