--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,10 +1,10 @@
 server.port=8082
 management.server.port=9082
 sqs.todo.queue="TODO_Queue"
-spring.database.driverClassName: "com.mysql.jdbc.Driver"
-spring.datasource.url: "jdbc:mysql://rsecommerce.civxewyb4pfe.us-west-2.rds.amazonaws.com/cqrsecommdb"
-spring.datasource.username: "binitdatta"
-spring.datasource.password: "detachment"
-spring.datasource.validationQuery: "SELECT 1"
-spring.jpa.properties.hibernate.dialect: "org.hibernate.dialect.MySQL5InnoDBDialect"
-spring.jpa.hibernate.ddl-auto: "update"
+spring.database.driverClassName="com.mysql.jdbc.Driver"
+spring.datasource.url="jdbc:mysql://rsecommerce.civxewyb4pfe.us-west-2.rds.amazonaws.com/cqrsecommdb"
+spring.datasource.username="binitdatta"
+spring.datasource.password="detachment"
+spring.datasource.validationQuery="SELECT 1"
+spring.jpa.properties.hibernate.dialect="org.hibernate.dialect.MySQL5InnoDBDialect"
+spring.jpa.hibernate.ddl-auto="update"
